# basic_backend

./: .env  .gitignore  Cargo.toml  README.md  run.sh  todo.todo  vapid_private_key.pem  vapid_public_key.pem
.github/workflows/: deploy.yml
common/: Cargo.toml
common/src/: constant.rs  enums.rs  errors.rs  functions.rs  lib.rs  responses.rs  types.rs
config/: basic.config  config.config
container/: Cargo.toml
container/src/: lib.rs
core/: Cargo.toml
core/src/: main.rs
databases/_surrealdb/: Cargo.toml
databases/_surrealdb/schemas/: down.surql  up.surql
databases/_surrealdb/src/: lib.rs  pool.rs
databases/_surrealdb/src/dao/: admin.rs  management.rs
databases/_surrealdb/src/data/: admin.rs  management.rs  message.rs  organization.rs
databases/_surrealdb/src/repositories/: admin.rs  common.rs  management.rs  message.rs  organization.rs
databases/postgresql/: Cargo.toml
databases/postgresql/sql/: down.sql  up.sql
databases/postgresql/src/: lib.rs  pool.rs
databases/postgresql/src/dao/: admin.rs  management.rs  organization.rs
databases/postgresql/src/data/: admin.rs  management.rs  message.rs  organization.rs
databases/postgresql/src/repositories/: admin.rs  management.rs  message.rs  organization.rs
databases/postgresql/src/schemas/: admin.rs  management.rs  message.rs  organization.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/dto/: admin.rs  management.rs  message.rs  organization.rs
domain/src/models/: admin.rs  management.rs  message.rs  organization.rs
domain/src/repositories/: admin.rs  common.rs  management.rs  message.rs  organization.rs  repository.rs
domain/src/services/: admin.rs  common.rs  management.rs  message.rs  organization.rs
interface/_actix_web/: Cargo.toml
interface/_actix_web/src/: middleware.rs  server.rs
interface/_actix_web/src/controllers/: admin.rs  message.rs  organization.rs
interface/_axum/: Cargo.toml
interface/_axum/src/: api_docs.rs  lib.rs  middleware.rs  server.rs
interface/_axum/src/controllers/: admin.rs  management.rs
interface/_clap/: Cargo.toml
interface/_clap/src/: lib.rs
interface/_clap/src/commands/: admin.rs
interface/_tonic/: Cargo.toml
services/: Cargo.toml
services/src/: lib.rs
services/src/logic/: admin.rs  common.rs  management.rs  message.rs  organization.rs
services/src/permission/: admin.rs  common.rs  management.rs  message.rs  organization.rs
