[package]
name = "common"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.4.0"

chrono = "0.4.31"

jsonwebtoken = "9.1.0"

serde = "1.0.188"

argon2 = "0.5.3"

serde_json = "1.0.116"

base64 = "0.22.0"

validator = "0.18.1"

surrealdb = "1.5.2"

reqwest = { version = "0.12", features = ["json"] }

utoipa = {version = "4.2.0", features = ["actix_extras", "chrono"]}

diesel = "2.2.2"