[package]
name = "container"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"

services = { path = "../services"}
domain = { path = "../domain"}
_surrealdb = { path = "../databases/_surrealdb", package = "_surrealdb" }
postgresql = { path = "../databases/postgresql", package = "postgresql" }
