[package]
name = "_axum"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tower-http = "0.5.2"
dotenv = "0.15.0"
env_logger = "0.11.3"

serde = "1.0.188"

utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = {version = "7.1.0", features = ["axum"]}
utoipa-scalar = {version = "0.1.0", features = ["axum"]}
utoipa = {version = "4.2.0", features = ["axum_extras", "chrono"]}

# serde_json = "1.0.117"

# futures-util = "0.3.30"

# uuid = { version = "1.9.1", features = ["fast-rng", "v4"] }

# actix-files = "0.6.5"

tokio = { version = "1.38.0", features = ["full"] }

log = "0.4.22"

common = { path = "../../common" }
domain = { path = "../../domain" }
container = { path = "../../container"}